Pascal/test/cohadar/pascal/errors/num_of_arguments2.pas
program test;

procedure njak(x,y:integer);
begin
end;

begin
	njak(3, 4, 5);
end.